snapshot before implementing csv handling

--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,6 @@
 
 # Note that in the `timeFormat` variable below you have to put two `%` signs bc the configparser uses `%` as a delimiter
 timeFormat = %%y-%%m-%%d %%a %%H:%%M:%%S
+
+# Path to the folder you'd like to store logLancer data (No `"`s needed around it!)
+storeDataHere = 
