--- a/config.ini
+++ b/config.ini
@@ -4,4 +4,10 @@
 timeFormat = %%y-%%m-%%d %%a %%H:%%M:%%S
 
 # Path to the folder you'd like to store logLancer data (No `"`s needed around it!)
+# If left blank it defaults to ~/.logLancerData
 storeDataHere = 
+
+[expansions]
+
+# Fields ahve to be separated by a single comma and nothing else. No trailing comma at the end of the line!
+fields = startTime,endTime,description,tags
